--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </main>
         </div>
         <footer>
-            <p>&copy; Your_name_here 2024. All rights reserved.</p>
+            <p>&copy; Jesse Ha 2024. All rights reserved.</p>
         </footer>
     </div>
 </body>
